feat: add personal access and project roles
